force-app/main/default/objects/light__c/light__c.object-meta.xml
<CustomObject>
    <label>light</label>
    <nameField>
        <displayFormat>light-{00}</displayFormat>
        <label>light Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>lights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>