force-app/main/default/objects/light__c/fields/area__c.field-meta.xml
<CustomField>
    <fullName>area__c</fullName>
    <label>area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>city__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>tnagar</fullName>
            </value>
            <value>
                <fullName>tambaram</fullName>
            </value>
            <value>
                <fullName>thoraipakam</fullName>
            </value>
            <value>
                <fullName>punecity</fullName>
            </value>
            <value>
                <fullName>noida</fullName>
            </value>
            <value>
                <fullName>crompet</fullName>
            </value>
            <value>
                <fullName>electronic city</fullName>
            </value>
            <value>
                <fullName>lbnagar</fullName>
            </value>
            <value>
                <fullName>srnagar</fullName>
            </value>
            <value>
                <fullName>hythnagar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>