force-app/main/default/objects/light__c/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <label>city</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>hyd</fullName>
            </value>
            <value>
                <fullName>chnn</fullName>
            </value>
            <value>
                <fullName>bang</fullName>
            </value>
            <value>
                <fullName>pune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>