force-app/main/default/objects/light__c/fields/courses_offered__c.field-meta.xml
<CustomField>
    <fullName>courses_offered__c</fullName>
    <label>courses offered</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>experienced__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>c</fullName>
            </value>
            <value>
                <fullName>c++</fullName>
            </value>
            <value>
                <fullName>java</fullName>
            </value>
            <value>
                <fullName>dotnet</fullName>
            </value>
            <value>
                <fullName>sql</fullName>
            </value>
            <value>
                <fullName>php</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>