force-app/main/default/objects/light__c/fields/experienced__c.field-meta.xml
<CustomField>
    <fullName>experienced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>experienced</label>
    <type>Checkbox</type>
</CustomField>