force-app/main/default/objects/light__c/fields/work__c.field-meta.xml
<CustomField>
    <fullName>work__c</fullName>
    <label>work</label>
    <length>18</length>
    <type>Text</type>
</CustomField>